--- a/styles/my_styles.css
+++ b/styles/my_styles.css
@@ -23,7 +23,7 @@
     align-items: center;
     justify-content: center;
     margin: 50px auto;
-    width: 840px;
+    max-width: 840px;
     height: 540px;
     background: linear-gradient(-45deg, transparent 72px, rgb(58, 215, 229) 0);
     position: relative; 
@@ -54,7 +54,6 @@
     flex: 1; 
     padding: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
     font-size: 16px;
     outline: none;
 }
@@ -64,7 +63,6 @@
     background-color: rgb(58, 215, 229);
     color: white;
     border: none;
-    border-radius: 4px;
     font-size: 16px;
     cursor: pointer;
 }
@@ -79,7 +77,6 @@
     max-width: 840px;
     margin: 0px auto;
     background-color: rgb(58, 215, 229);
-    border-radius: 5px;
 }
 
 .submit__btn {
